# ros2study

./: README.md
2.ros node/: Node.md
3.Service, Topic, Action/: 3-1.Concept.md
3.Service,Topic, Action/: 3-2.Service.md  3-3.Topic.md  3-4.Action.md
4.rclpy/: Python_Publisher.md
addinedu_pro/: alias_setting.md  alias_setting.sh
addinedu_pro/day3_jetcobot (mycobot280)/: alias_setting_jetcobot.sh
addinedu_pro/jetcobot (mycobot280)/: Hi_jetcobot_test.ipynb
addinedu_project/day10_QR_detect/: QR_Detect.py
addinedu_project/day11_WebSocket_ing/: Camera_viewer.html  day11_camera_stream_socket.py
addinedu_project/day12_WebSocket/: client.html  day12_websocket.py  websocket_racing_issue.py
addinedu_project/day13_UDP&TCP/: TCP_websocket_server.py  day13_UDP_video_receiver.py  day13_UDP_video_sender.py
addinedu_project/day14_ROS2 Package/mediapipe_jetcobot_teleop/: setup.cfg  setup.py
addinedu_project/day14_RTSP/: RTSP_client.py  RTSP_server.py
addinedu_project/day15_ROS2 Communication Package/JETCOBOT/: alias_setting_jetcobot.sh
addinedu_project/day15_ROS2 Communication Package/PC/: alias_setting.sh
addinedu_project/day16_TCP validation/: Validation_TCP_client.html  Validation_TCP_server.py
addinedu_project/day17_UDP recode/: UDP_client_recode.py  UDP_server_recode.py
addinedu_project/day19_April Tag detect (TCP)/: apriltag_detect_client.py  apriltag_detect_server.py
addinedu_project/day20_server-GUI/: gui_bidirectionalTCP.py
addinedu_project/day20_server-GUI (bidirectional TCP)/: server_bidirectionalTCP.py
addinedu_project/day21_camera_calibration/: 01_Calibration Pattern checkerboard link.txt  camera_calibration_client.py  camera_calibration_server.py
addinedu_project/day22_camera_calibration_2/: client_camera_calibration.py  server_camera_calibration.py
addinedu_project/day23_April Tag XYZ detect/: apriltag_z_client.py  apriltag_z_server.py
addinedu_project/day23_camera_calibration_3/: camera_calibration_client.py  camera_calibration_server.py
addinedu_project/day24_move_jetcobot/: move_server.py
addinedu_project/day26_UDP stream analyze/: udp_receiver_with_plot.py  udp_sender.py
addinedu_project/day27_smooth_movement/: smooth_jetcobot_move.py
addinedu_project/day28_Control Server <-> Jetcobot (ROS2 Action)/Jetcobot/jetcobot_teleop/: CMakeLists.txt  package.xml  setup.py
addinedu_project/day28_Control Server <-> Jetcobot (ROS2 Action)/Jetcobot/jetcobot_teleop/action/: OrderJetcobot.action
addinedu_project/day28_Control Server <-> Jetcobot (ROS2 Action)/Jetcobot/jetcobot_teleop/jetcobot_teleop/: action_server_node.py  aruco_detector_node.py  jetcobot_control_node.py
addinedu_project/day28_Control Server <-> Jetcobot (ROS2 Action)/Jetcobot/jetcobot_teleop/msg/: OrderJetcobot.idl
addinedu_project/day28_Control Server <-> user GUI (TCP Websoket)/: serboway_control_server.py  serboway_streamlit_gui.py
addinedu_project/day29_Control Server <-> Jetcobot (ROS2 Action)/Control Server/jetcobot_interfaces/: CMakeLists.txt  package.xml
addinedu_project/day29_Control Server <-> Jetcobot (ROS2 Action)/Control Server/jetcobot_interfaces/action/: OrderJetcobot.action
addinedu_project/day29_Control Server <-> Jetcobot (ROS2 Action)/Control Server/jetcobot_interfaces/src/: action_definitions.cpp
addinedu_project/day29_Control Server <-> Jetcobot (ROS2 Action)/Control Server/serboway_control_server/: package.xml  setup.cfg  setup.py
addinedu_project/day29_Control Server <-> Jetcobot (ROS2 Action)/Control Server/serboway_control_server/resource/: serboway_control_server
addinedu_project/day29_Control Server <-> Jetcobot (ROS2 Action)/Control Server/serboway_control_server/serboway_control_server/: order_client.py
addinedu_project/day30_day29_User GUI -> Control Server -> DB (HTTP&TCP)/: serboway_control_server.py
addinedu_project/day33_ User Kiosk -> Control Server <-> Jetcobot (ROS2 pkg)/Control Server_cho/: user_kiosk_streamlit_test.py
addinedu_project/day33_ User Kiosk -> Control Server <-> Jetcobot (ROS2 pkg)/Control Server_cho/serboway_control/: package.xml  setup.py
addinedu_project/day33_ User Kiosk -> Control Server <-> Jetcobot (ROS2 pkg)/Control Server_cho/serboway_control/serboway_control/: serboway_control_server.py
addinedu_project/day34_serboway_system pkg/my_msgs/: package.xml
addinedu_project/day34_serboway_system pkg/serboway_system/: package.xml  setup.py
addinedu_project/day35_serboway_system_ing/my_msgs/: CMakeLists.txt
addinedu_project/day35_serboway_system_ing/my_msgs/srv/: MakerStatus.srv
addinedu_project/day35_serboway_system_ing/serboway_system/: setup.py
addinedu_project/day36_serboway_system_70%/serboway_system/: package.xml  setup.py
addinedu_project/day36_serboway_system_70%/serboway_system/serboway_system/: backup.py
addinedu_project/day36_serboway_system_70%/serboway_system/serboway_system/pinky_task_allocation/: simplified_pinky_allocator.py
addinedu_project/day37_serboway_system_80% (pinky task allocation)/serboway_system/: setup.py
addinedu_project/day37_serboway_system_80% (pinky task allocation)/study_ros2_bridge/: bridge_74_78_in.yaml  bridge_78_74_out.yaml
addinedu_project/day38_serboway_system_100% (pinky serving task allocation)/my_msgs/: CMakeLists.txt  package.xml
addinedu_project/day39_serboway_pinky_maker_comm_v0.81/: bridge_74_84.yaml  flask_rest_api.py
addinedu_project/day39_serboway_pinky_maker_comm_v0.81/serboway_system/: setup.py
addinedu_project/day40_serboway_pinky_maker_comm_v0.9/: pickup_button.html
addinedu_project/day7_V-model application planning meeting/: confluence_link.md
addinedu_project/day7_mediapipe (jetcobot camera)/: gesture_recognition.ipynb
addinedu_project/day8_mediapipe (jetcobot camera)/: hand_modul.py  mediapipe_main.py
addinedu_project/day9_QR make/: QRmaker.py
addinedu_project/day9_QR make, detect/: QRmaker.py
ros2_basic/: 2.Action.md  2.Concept.md  3.Python_Subscription.md  3.review_rclpy.ipynb
study_ros2_basic/: 1.alias_setting.md  2.Service.md  portfolio_QRmaker.py
(+94 files in other folders)
