<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serboway_system</name>
  <version>0.0.0</version>
  <description>Serboway robot system package</description>
  <maintainer email="iceative12@gmail.com">addineud</maintainer>
  <license>MIT</license>

  <!-- Python & ROS2 런타임 의존성 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>my_msgs</exec_depend> <!-- CheckOrderBuffer 서비스가 여기에 있다면 추가 -->

  <!-- 테스트 의존성 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
