<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetcobot_interfaces</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="iceative12@gmail.com">jetcobot</maintainer>
  <license>MIT</license> <!-- 또는 Apache-2.0 등 실제 라이선스 선택 -->


  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Action, IDL 생성을 위한 의존성 추가 -->
  <depend>builtin_interfaces</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!-- 이 부분 추가 -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
